[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Battle.gd" type="Script" id=1]
[ext_resource path="res://images/terrible-forest.png" type="Texture" id=2]
[ext_resource path="res://images/basic-menu-bar.png" type="Texture" id=3]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://scenes/Hand.tscn" type="PackedScene" id=6]

[node name="Battle" type="Node"]

script = ExtResource( 1 )

[node name="terrible-forest" type="Sprite" parent="." index="0"]

position = Vector2( 96, 96 )
texture = ExtResource( 2 )

[node name="basic-menu-bar" type="Sprite" parent="." index="1"]

position = Vector2( 96, 160 )
texture = ExtResource( 3 )

[node name="PlayText" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 144.0
margin_right = 64.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="ScryText" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 160.0
margin_right = 64.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCRY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="DrawText" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 144.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DRAW"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="FleeText" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 160.0
margin_right = 160.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FLEE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Enemy" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 86, 64 )

[node name="cursor" type="Sprite" parent="." index="7"]

visible = false
position = Vector2( 120, 166 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Hand" parent="." index="8" instance=ExtResource( 6 )]

[node name="HandTween" type="Tween" parent="." index="9"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="10"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Fade" type="Sprite" parent="CanvasLayer" index="0"]

visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 100, 100 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="FadeTween" type="Tween" parent="CanvasLayer/Fade" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="drawCard" from="." to="Hand" method="_on_Battle_drawCard"]

[connection signal="hideHand" from="." to="Hand" method="_on_Battle_hideHand"]

[connection signal="highlightCard" from="." to="Hand" method="_on_Battle_highlightCard"]

[connection signal="playCard" from="." to="Hand" method="_on_Battle_playCard"]

[connection signal="showHand" from="." to="Hand" method="_on_Battle_showHand"]

[connection signal="dealDamage" from="Hand" to="." method="_on_Hand_dealDamage"]

[connection signal="sceneIsBusy" from="Hand" to="." method="_on_Hand_sceneIsBusy"]

[connection signal="tween_completed" from="CanvasLayer/Fade/FadeTween" to="." method="_on_FadeTween_tween_completed"]


